--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,22 +22,6 @@
         >
           <i class="bx bx-menu"></i>
         </div>
-        <div
-          class="position-relative search-bar d-lg-block d-none"
-          data-bs-toggle="modal"
-          data-bs-target="#SearchModal"
-        >
-          <input
-            class="form-control px-5"
-            disabled
-            type="search"
-            placeholder="Search"
-          />
-          <span
-            class="position-absolute top-50 search-show ms-3 translate-middle-y start-0 top-50 fs-5"
-            ><i class="bx bx-search"></i
-          ></span>
-        </div>
         <div class="top-menu ms-auto">
           <ul class="navbar-nav align-items-center gap-1">
             <li
@@ -48,190 +32,6 @@
               <a class="nav-link" href="avascript:;"
                 ><i class="bx bx-search"></i>
               </a>
-            </li>
-
-            <li class="nav-item dropdown dropdown-large">
-              <a
-                class="nav-link dropdown-toggle dropdown-toggle-nocaret position-relative"
-                href="#"
-                data-bs-toggle="dropdown"
-                ><span class="alert-count">7</span>
-                <i class="bx bx-bell"></i>
-              </a>
-              <div class="dropdown-menu dropdown-menu-end">
-                <a href="javascript:;">
-                  <div class="msg-header">
-                    <p class="msg-header-title">Notifications</p>
-                    <p class="msg-header-badge">8 New</p>
-                  </div>
-                </a>
-                <div class="header-notifications-list">
-                  <a class="dropdown-item" href="javascript:;">
-                    <div class="d-flex align-items-center">
-                      <div class="user-online">
-                        <img
-                          src="assets/images/avatars/avatar-1.png"
-                          class="msg-avatar"
-                          alt="user avatar"
-                        />
-                      </div>
-                      <div class="flex-grow-1">
-                        <h6 class="msg-name">
-                          Daisy Anderson<span class="msg-time float-end"
-                            >5 sec ago</span
-                          >
-                        </h6>
-                        <p class="msg-info">The standard chunk of lorem</p>
-                      </div>
-                    </div>
-                  </a>
-                  <a class="dropdown-item" href="javascript:;">
-                    <div class="d-flex align-items-center">
-                      <div class="notify bg-light-danger text-danger">dc</div>
-                      <div class="flex-grow-1">
-                        <h6 class="msg-name">
-                          New Orders
-                          <span class="msg-time float-end">2 min ago</span>
-                        </h6>
-                        <p class="msg-info">You have recived new orders</p>
-                      </div>
-                    </div>
-                  </a>
-                  <a class="dropdown-item" href="javascript:;">
-                    <div class="d-flex align-items-center">
-                      <div class="user-online">
-                        <img
-                          src="assets/images/avatars/avatar-2.png"
-                          class="msg-avatar"
-                          alt="user avatar"
-                        />
-                      </div>
-                      <div class="flex-grow-1">
-                        <h6 class="msg-name">
-                          Althea Cabardo
-                          <span class="msg-time float-end">14 sec ago</span>
-                        </h6>
-                        <p class="msg-info">
-                          Many desktop publishing packages
-                        </p>
-                      </div>
-                    </div>
-                  </a>
-                  <a class="dropdown-item" href="javascript:;">
-                    <div class="d-flex align-items-center">
-                      <div class="notify bg-light-success text-success">
-                        <img
-                          src="assets/images/app/outlook.png"
-                          width="25"
-                          alt="user avatar"
-                        />
-                      </div>
-                      <div class="flex-grow-1">
-                        <h6 class="msg-name">
-                          Account Created<span class="msg-time float-end"
-                            >28 min ago</span
-                          >
-                        </h6>
-                        <p class="msg-info">Successfully created new email</p>
-                      </div>
-                    </div>
-                  </a>
-                  <a class="dropdown-item" href="javascript:;">
-                    <div class="d-flex align-items-center">
-                      <div class="notify bg-light-info text-info">Ss</div>
-                      <div class="flex-grow-1">
-                        <h6 class="msg-name">
-                          New Product Approved
-                          <span class="msg-time float-end">2 hrs ago</span>
-                        </h6>
-                        <p class="msg-info">Your new product has approved</p>
-                      </div>
-                    </div>
-                  </a>
-                  <a class="dropdown-item" href="javascript:;">
-                    <div class="d-flex align-items-center">
-                      <div class="user-online">
-                        <img
-                          src="assets/images/avatars/avatar-4.png"
-                          class="msg-avatar"
-                          alt="user avatar"
-                        />
-                      </div>
-                      <div class="flex-grow-1">
-                        <h6 class="msg-name">
-                          Katherine Pechon
-                          <span class="msg-time float-end">15 min ago</span>
-                        </h6>
-                        <p class="msg-info">
-                          Making this the first true generator
-                        </p>
-                      </div>
-                    </div>
-                  </a>
-                  <a class="dropdown-item" href="javascript:;">
-                    <div class="d-flex align-items-center">
-                      <div class="notify bg-light-success text-success">
-                        <i class="bx bx-check-square"></i>
-                      </div>
-                      <div class="flex-grow-1">
-                        <h6 class="msg-name">
-                          Your item is shipped
-                          <span class="msg-time float-end">5 hrs ago</span>
-                        </h6>
-                        <p class="msg-info">Successfully shipped your item</p>
-                      </div>
-                    </div>
-                  </a>
-                  <a class="dropdown-item" href="javascript:;">
-                    <div class="d-flex align-items-center">
-                      <div class="notify bg-light-primary">
-                        <img
-                          src="assets/images/app/github.png"
-                          width="25"
-                          alt="user avatar"
-                        />
-                      </div>
-                      <div class="flex-grow-1">
-                        <h6 class="msg-name">
-                          New 24 authors<span class="msg-time float-end"
-                            >1 day ago</span
-                          >
-                        </h6>
-                        <p class="msg-info">
-                          24 new authors joined last week
-                        </p>
-                      </div>
-                    </div>
-                  </a>
-                  <a class="dropdown-item" href="javascript:;">
-                    <div class="d-flex align-items-center">
-                      <div class="user-online">
-                        <img
-                          src="assets/images/avatars/avatar-8.png"
-                          class="msg-avatar"
-                          alt="user avatar"
-                        />
-                      </div>
-                      <div class="flex-grow-1">
-                        <h6 class="msg-name">
-                          Peter Costanzo
-                          <span class="msg-time float-end">6 hrs ago</span>
-                        </h6>
-                        <p class="msg-info">
-                          It was popularised in the 1960s
-                        </p>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <a href="javascript:;">
-                  <div class="text-center msg-footer">
-                    <button class="btn btn-primary w-100">
-                      View All Notifications
-                    </button>
-                  </div>
-                </a>
-              </div>
             </li>
           </ul>
         </div>
@@ -244,16 +44,17 @@
             aria-expanded="false"
           >
             <img
-              src="assets/images/avatars/avatar-2.png"
+              src="https://cloud.squidex.io/api/assets/intranet-vianet/816ab0fa-6f0f-4f40-8fcd-4f564f9a81bf/person.png?version=0"
               class="user-img"
               alt="user avatar"
             />
             <div class="user-info">
-              <p class="user-name mb-0">Pauline Seitz</p>
-              <p class="designattion mb-0">Web Designer</p>
+              <p class="user-name mb-0">{{ userName }}</p>
+              <p class="designattion mb-0">{{ area }}</p>
             </div>
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
+            <!--
             <li>
               <a
                 class="dropdown-item d-flex align-items-center"
@@ -261,8 +62,11 @@
                 ><i class="bx bx-user fs-5"></i><span>Meu perfil</span></a
               >
             </li>
+            -->
             <li>
-              <a [routerLink]="['/admin']" routerLinkActive="router-link-active"
+              <a *ngIf="areaId==0"
+                [routerLink]="['/admin']"
+                routerLinkActive="router-link-active"
                 class="dropdown-item d-flex align-items-center"
                 ><i class="bx bx-cog fs-5"></i><span>Administração</span></a
               >
@@ -272,6 +76,7 @@
             </li>
             <li>
               <a
+                (click)="logout()"
                 class="dropdown-item d-flex align-items-center"
                 href="javascript:;"
                 ><i class="bx bx-log-out-circle"></i><span>Sair</span></a
@@ -296,7 +101,7 @@
           <div class="d-flex align-items-center">
             <div class="">
               <img
-                src="assets/images/logo-icon.png"
+                src="https://cloud.squidex.io/api/assets/intranet-vianet/816ab0fa-6f0f-4f40-8fcd-4f564f9a81bf/person.png?version=0"
                 class="logo-icon"
                 alt="logo icon"
               />
@@ -314,15 +119,16 @@
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav align-items-center flex-grow-1">
+            <!--
             <li class="nav-item dropdown">
-              <a [routerLink]="['/']" routerLinkActive="router-link-active"
+              <a
+                [routerLink]="['/']"
+                routerLinkActive="router-link-active"
                 class="nav-link dropdown-toggle dropdown-toggle-nocaret"
                 data-bs-toggle="dropdown"
               >
                 <div class="parent-icon"><i class="bx bx-home-alt"></i></div>
-                <div class="menu-title d-flex align-items-center">
-                  Painel
-                </div>
+                <div class="menu-title d-flex align-items-center">Painel</div>
               </a>
             </li>
             <li class="nav-item dropdown">
@@ -332,126 +138,68 @@
                 data-bs-toggle="dropdown"
               >
                 <div class="parent-icon"><i class="bx bx-cube"></i></div>
-                <div class="menu-title d-flex align-items-center">
-                  Espaços
-                </div>
+                <div class="menu-title d-flex align-items-center">Espaços</div>
                 <div class="ms-auto dropy-icon">
                   <i class="bx bx-chevron-down"></i>
                 </div>
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="app-emailbox.html"
-                    ><i class="bx bx-envelope"></i>Email</a
+                  <a
+                    class="dropdown-item"
+                    [routerLink]="['/espaco']"
+                    routerLinkActive="router-link-active"
+                    ><i class="bx bx-conversation"></i>Geral</a
                   >
                 </li>
                 <li>
                   <a class="dropdown-item" href="app-chat-box.html"
-                    ><i class="bx bx-conversation"></i>Chat Box</a
+                    ><i class="bx bx-conversation"></i>DTI</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="app-file-manager.html"
-                    ><i class="bx bx-file"></i>File Manager</a
+                  <a class="dropdown-item"
+                    data-bs-toggle="modal"
+                    data-bs-target="#addEspacoModal"
+                    class="btn btn-primary btn-block"
+                    ><i class="bx bxs-plus-square"></i>Novo Espaço</a
                   >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="app-contact-list.html"
-                    ><i class="bx bx-microphone"></i>Contacts</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="app-to-do.html"
-                    ><i class="bx bx-check-shield"></i>Todo</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="app-invoice.html"
-                    ><i class="bx bx-printer"></i>Invoice</a
-                  >
-                </li>
-                <li class="nav-item dropend">
-                  <a
-                    class="dropdown-item dropdown-toggle dropdown-toggle-nocaret"
-                    href="javascript:;"
-                    ><i class="bx bx-file"></i>Pages</a
-                  >
-                  <ul class="dropdown-menu submenu">
-                    <li class="nav-item dropend">
-                      <a
-                        class="dropdown-item dropdown-toggle dropdown-toggle-nocaret"
-                        href="javascript:;"
-                        ><i class="bx bx-radio-circle"></i>Error</a
-                      >
-                      <ul class="dropdown-menu">
-                        <li>
-                          <a
-                            class="dropdown-item"
-                            href="errors-404-error.html"
-                            ><i class="bx bx-radio-circle"></i>404 Error</a
-                          >
-                        </li>
-                        <li>
-                          <a
-                            class="dropdown-item"
-                            href="errors-500-error.html"
-                            ><i class="bx bx-radio-circle"></i>500 rror</a
-                          >
-                        </li>
-                        <li>
-                          <a
-                            class="dropdown-item"
-                            href="errors-coming-soon.html"
-                            ><i class="bx bx-radio-circle"></i>Coming Soon</a
-                          >
-                        </li>
-                        <li>
-                          <a
-                            class="dropdown-item"
-                            href="error-blank-page.html"
-                            ><i class="bx bx-radio-circle"></i>Blank Page</a
-                          >
-                        </li>
-                      </ul>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="user-profile.html"
-                        ><i class="bx bx-radio-circle"></i>User Profile</a
-                      >
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="timeline.html"
-                        ><i class="bx bx-radio-circle"></i>Timeline</a
-                      >
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="faq.html"
-                        ><i class="bx bx-radio-circle"></i>FAQ</a
-                      >
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="pricing-table.html"
-                        ><i class="bx bx-radio-circle"></i>Pricing</a
-                      >
-                    </li>
-                  </ul>
                 </li>
               </ul>
             </li>
             <li class="nav-item dropdown">
               <a
+                [routerLink]="['/projectos']"
+                routerLinkActive="router-link-active"
                 class="nav-link dropdown-toggle dropdown-toggle-nocaret"
-                href="javascript:;"
                 data-bs-toggle="dropdown"
               >
                 <div class="parent-icon">
                   <i class="bx bx-message-square-edit"></i>
                 </div>
-                <div class="menu-title d-flex align-items-center">Tarefas</div>
+                <div class="menu-title d-flex align-items-center">
+                  Projectos
+                </div>
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a [routerLink]="['/processos']" routerLinkActive="router-link-active"
+              <a
+                [routerLink]="['/noticias']"
+                routerLinkActive="router-link-active"
+                class="nav-link dropdown-toggle dropdown-toggle-nocaret"
+                data-bs-toggle="dropdown"
+              >
+                <div class="parent-icon">
+                  <i class="bx bx-message-square-edit"></i>
+                </div>
+                <div class="menu-title d-flex align-items-center">Notícias</div>
+              </a>
+            </li>
+          -->
+            <li class="nav-item dropdown">
+              <a
+                [routerLink]="['/processos']"
+                routerLinkActive="router-link-active"
                 class="nav-link dropdown-toggle dropdown-toggle-nocaret"
                 data-bs-toggle="dropdown"
               >
@@ -465,16 +213,16 @@
             </li>
 
             <li class="nav-item dropdown">
-              <a [routerLink]="['/pessoas']" routerLinkActive="router-link-active"
+              <a
+                [routerLink]="['/pessoas']"
+                routerLinkActive="router-link-active"
                 class="nav-link dropdown-toggle dropdown-toggle-nocaret"
                 data-bs-toggle="dropdown"
               >
                 <div class="parent-icon">
                   <i class="bx bx-user"></i>
                 </div>
-                <div class="menu-title d-flex align-items-center">
-                  Pessoas
-                </div>
+                <div class="menu-title d-flex align-items-center">Pessoas</div>
               </a>
             </li>
           </ul>
