--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--wrapper-->
 <div class="wrapper">
   <!--start header wrapper-->
-  <app-header></app-header>
+  <app-header *ngIf="online"></app-header>
   <!--end header wrapper-->
   <!--start page wrapper -->
 
@@ -20,3 +20,41 @@
   </footer>
 </div>
 <!--end wrapper-->
+
+<div
+  class="modal fade"
+  id="addEspacoModal"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  style="display: none"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Novo Espaço</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <form class="row g-3">
+          <div class="col-md-12">
+            <label for="input1" class="form-label">Descrição</label>
+            <input type="text" class="form-control" id="input1" />
+          </div>
+        </form>
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Fechar
+        </button>
+        <button type="button" class="btn btn-primary">Salvar</button>
+      </div>
+    </div>
+  </div>
+</div>
