--- a/src/app/components/arquivos/arquivos.component.html
+++ b/src/app/components/arquivos/arquivos.component.html
@@ -1,81 +1,125 @@
 <!--start page wrapper -->
 <div class="page-wrapper">
   <div class="page-content">
-    <h6 class="mb-0 text-uppercase">Processo X</h6>
+    <h6 class="mb-0">
+      Processo: {{ processo.name }} | Área: {{ getArea(processo.areaId) }}
+    </h6>
     <hr />
     <div class="row">
       <div class="col-12 col-lg-3">
         <div class="card">
           <div class="card-body">
-            <div class="d-grid"> <a href="javascript:;" class="btn btn-primary">Adicionar arquivo</a>
+            <div class="d-grid">
+              <p>Criado por: {{ processo.createdBy }}</p>
+              <p>Origem: {{ processo.source == 1 ? "INTERNO" : "EXTERNO" }}</p>
+              <p *ngIf="processo.source == 1">
+                Área de origem: {{ getArea(processo.sourceAreaId) }}
+              </p>
+              <p>Área de destino: {{ getArea(processo.targetAreaId) }}</p>
+              <p *ngIf="processo.source == 2">
+                Nome da entidade: {{ processo.entityName }}
+              </p>
+              <p *ngIf="processo.source == 2">NIF: {{ processo.entityNIF }}</p>
+              <p>Código QR:</p>
+              <img
+                *ngIf="processo.qrCodeUuid"
+                width="200px"
+                height="200px"
+                [src]="baseUrl + imageURL"
+                class="mx-auto d-block"
+                alt="QR Code"
+              />
             </div>
-            <h5 class="my-3">My Drive</h5>
           </div>
         </div>
       </div>
       <div class="col-12 col-lg-9">
-        <div class="card">
-          <div class="card-body">
-            <div class="fm-search">
-              <div class="mb-0">
-                <div class="input-group input-group-lg">	<span class="input-group-text bg-transparent"><i class='bx bx-search'></i></span>
-                  <input type="text" class="form-control" placeholder="Pesquisar">
-                </div>
-              </div>
-            </div>
+        <div *ngIf="loading" class="d-flex justify-content-center">
+          <div
+            style="width: 5rem; height: 5rem"
+            class="spinner-border"
+            role="status"
+          ></div>
+        </div>
 
+        <div class="card" *ngIf="!loading">
+          <div class="card-body">
             <div class="d-flex align-items-center">
               <div>
                 <h5 class="mb-0 mt-3">Arquivos</h5>
+              </div>
+            </div>
+            <div class="mt-3">
+              <label for="formFileLg" class="form-label">Novo ficheiro</label>
+              <input
+                (change)="onFileSelected($event)"
+                class="form-control form-control"
+                id="formFileLg"
+                type="file"
+              />
+            </div>
+            <div class="table-responsive mt-3">
+              <table class="table table-striped table-hover table-sm mb-0">
+                <thead>
+                  <tr>
+                    <th>Nome</th>
+                    <th>Data de cadastro</th>
+                    <th></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let item of ficheiros">
+                    <td>
+                      <div class="d-flex align-items-center">
+                        <div>
+                          <i class="bx bxs-file me-2 font-24 text-primary"></i>
+                        </div>
+                        <div class="font-weight-bold text-primary">
+                          {{ item.name }}
+                        </div>
+                      </div>
+                    </td>
+                    <td>{{ item.createdAt | date : "dd-MM-yyyy hh:mm" }}</td>
+                    <td>
+                      <a [href]="baseUrl+'/api/files/'+item.uuid+'/download'" target="_blank" type="button" class="btn btn-outline-primary">
+                        <i class="bx bx-download me-0"></i>
+                      </a>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+
+        <!--
+        <div class="card" *ngIf="!loading">
+          <div class="card-body">
+            <div class="d-flex align-items-center">
+              <div>
+                <h5 class="mb-0 mt-3">Histórico</h5>
               </div>
             </div>
             <div class="table-responsive mt-3">
               <table class="table table-striped table-hover table-sm mb-0">
                 <thead>
                   <tr>
-                    <th>Name <i class='bx bx-up-arrow-alt ms-2'></i>
-                    </th>
-                    <th>Members</th>
-                    <th>Last Modified</th>
-                    <th></th>
+                    <th>Área de destino</th>
+                    <th>Alterado Por</th>
+                    <th>Data</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <td>
                       <div class="d-flex align-items-center">
-                        <div><i class='bx bxs-file-pdf me-2 font-24 text-danger'></i>
-                        </div>
-                        <div class="font-weight-bold text-danger">Competitor Analysis Template</div>
-                      </div>
-                    </td>
-                    <td>Only you</td>
-                    <td>Sep 3, 2019</td>
-                    <td>
-                      <div class="dropdown ms-auto">
-                        <div class="dropdown-toggle dropdown-toggle-nocaret cursor-pointer" data-bs-toggle="dropdown">	<i class='bx bx-dots-horizontal-rounded font-22'></i>
-                        </div>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="javascript:;">QR Code</a>
-                          </li>
-                          <li><a class="dropdown-item" href="javascript:;">Eliminar</a>
-                          </li>
-                        </ul>
-                      </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="d-flex align-items-center">
                         <div><i class='bx bxs-file me-2 font-24 text-primary'></i>
                         </div>
-                        <div class="font-weight-bold text-primary">How to Create a Case Study</div>
+                        <div>How to Create a Case Study</div>
                       </div>
                     </td>
                     <td>3 members</td>
                     <td>Jun 12, 2019</td>
-                    <td><i class='bx bx-dots-horizontal-rounded font-24'></i>
-                    </td>
                   </tr>
 
                 </tbody>
@@ -83,6 +127,7 @@
             </div>
           </div>
         </div>
+        -->
       </div>
     </div>
     <!--end row-->
