--- a/src/app/components/arquivos/arquivos.component.html
+++ b/src/app/components/arquivos/arquivos.component.html
@@ -44,10 +44,16 @@
 
         <div class="card" *ngIf="!loading">
           <div class="card-body">
-            <div class="d-flex align-items-center">
-              <div>
-                <h5 class="mb-0 mt-3">Arquivos</h5>
-              </div>
+            <div class="mb-3">
+              <label for="inputProductTitle" class="form-label"
+                >Observação</label
+              >
+              <input
+                [(ngModel)]="obs"
+                type="email"
+                class="form-control"
+                id="inputProductTitle"
+              />
             </div>
             <div class="mt-3">
               <label for="formFileLg" class="form-label">Novo ficheiro</label>
@@ -58,6 +64,18 @@
                 type="file"
               />
             </div>
+            <div class="col-12">
+              <div class="mt-3">
+                <button
+                  (click)="actualizar()"
+                  type="button"
+                  class="btn btn-primary"
+                >
+                  Actualizar processo
+                </button>
+              </div>
+            </div>
+            <h5 class="mb-0 mt-3">Arquivos</h5>
             <div class="table-responsive mt-3">
               <table class="table table-striped table-hover table-sm mb-0">
                 <thead>
@@ -81,7 +99,14 @@
                     </td>
                     <td>{{ item.createdAt | date : "dd-MM-yyyy hh:mm" }}</td>
                     <td>
-                      <a [href]="baseUrl+'/api/files/'+item.uuid+'/download'" target="_blank" type="button" class="btn btn-outline-primary">
+                      <a
+                        [href]="
+                          baseUrl + '/api/files/' + item.uuid + '/download'
+                        "
+                        target="_blank"
+                        type="button"
+                        class="btn btn-outline-primary"
+                      >
                         <i class="bx bx-download me-0"></i>
                       </a>
                     </td>
@@ -92,7 +117,6 @@
           </div>
         </div>
 
-        <!--
         <div class="card" *ngIf="!loading">
           <div class="card-body">
             <div class="d-flex align-items-center">
@@ -104,30 +128,31 @@
               <table class="table table-striped table-hover table-sm mb-0">
                 <thead>
                   <tr>
-                    <th>Área de destino</th>
+                    <th>Descrição</th>
+                    <th>Obs</th>
                     <th>Alterado Por</th>
                     <th>Data</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
+                  <tr *ngFor="let item of historico">
                     <td>
-                      <div class="d-flex align-items-center">
-                        <div><i class='bx bxs-file me-2 font-24 text-primary'></i>
-                        </div>
-                        <div>How to Create a Case Study</div>
-                      </div>
+                      {{ item.action }} -
+                      <span class="font-weight-bold text-primary">{{
+                        item.fileUuid != null
+                          ? getFilename(item.fileUuid)
+                          : "OBS"
+                      }}</span>
                     </td>
-                    <td>3 members</td>
-                    <td>Jun 12, 2019</td>
+                    <td>{{ item.obs }}</td>
+                    <td>{{ item.createdBy }}</td>
+                    <td>{{ item.createdAt | date : "dd-MM-yyyy hh:mm" }}</td>
                   </tr>
-
                 </tbody>
               </table>
             </div>
           </div>
         </div>
-        -->
       </div>
     </div>
     <!--end row-->
